--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <header>
     <div class="topnav" id="topnav">
       <a href="/">Data Donation</a>
-      <a href="facebook">Facebook</a>
+      <a href="facebook">Facebook (Web)</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         MENU
       </a>
