--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
     <div class="topnav" id="topnav">
       <a href="/">Data Donation</a>
       <a href="facebook">Facebook (Web)</a>
+      <a href="facebook_ios">Facebook (iOS)</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         MENU
       </a>
