ADd menu item for IG

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
       <a href="/">Data Donation</a>
       <a href="facebook">Facebook (Web)</a>
       <a href="facebook_ios">Facebook (iOS)</a>
+      <a href="instagram">Instagram (Web)</a>
+      <a href="instagram_apb">Instagram (App)</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         MENU
       </a>
