--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <a href="facebook">Facebook (Web)</a>
       <a href="facebook_ios">Facebook (iOS)</a>
       <a href="instagram">Instagram (Web)</a>
-      <a href="instagram_apb">Instagram (App)</a>
+      <a href="instagram_app">Instagram (App)</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         MENU
       </a>
