--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
       <a href="facebook_ios">Facebook (iOS)</a>
       <a href="instagram">Instagram (Web)</a>
       <a href="instagram_app">Instagram (App)</a>
+      <a href="x">X (Web)</a>
+      <a href="x_app">X (App)</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         MENU
       </a>
