--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
     <header>
     <div class="topnav" id="topnav">
       <a href="/">Data Donation</a>
-      <a href="facebook">Facebook (Web)</a>
-      <a href="instagram">Instagram (Web)</a>
-      <a href="youtube">YouTube (Web)</a>
-      <a href="x">X (Web)</a>
+      <a href="facebook">Facebook</a>
+      <a href="instagram">Instagram</a>
+      <a href="youtube">YouTube</a>
+      <a href="x">X</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         MENU
       </a>
