--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
       <a href="instagram">Instagram</a>
       <a href="youtube">YouTube</a>
       <a href="x">X</a>
+      <a href="tiktok">TikTok</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         MENU
       </a>
